fixed issue with navbar on mobile displays

--- a/static/css/gadget.css
+++ b/static/css/gadget.css
@@ -210,6 +210,9 @@ textarea {
     padding-top: 55px; /* same as body's padding-top -- used to counter fixed position site navbar */
 }
 
+.dropdown-backdrop {
+    position: static;
+}
 
 #maincontent {
     -o-animation: fadein .7s;
